# shallow_water_demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  container.yaml  image.yaml
examples/: quiescent.yaml  tidal_wave.yaml
scripts/: run_shallow_water.sh
src/shallow_water/: __init__.py  cli.py  communicator.py  config.py  driver.py  grid.py  model.py  plot.py  state.py
tests/: test_config.py  test_driver.py  test_grid.py  test_model.py  test_plot.py  test_state.py
