[metadata]
name = shallow_water
version = 0.1.0
author = Johann Dahm
description = Miniapp for gt4py
long_description = Miniapp that solves the shallow water equations using the finite volume method.
url = https://github.com/ai2cm/gt4py_shallow_water_demo
keywords = miniapp, gt4py, hpc, mpi

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    mpi4py
    gt4py
    pyyaml
    dacite

[options.packages.find]
where = src

[flake8]
max-line-length = 100
exclude = tests/*
max-complexity = 10

[coverage:run]
branch = True

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

    # Don't complain about abstract methods, they aren't run:
    @(abc\.)?abstractmethod

omit =
    src/shallow_water/communicator.py
